# Pietro

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
base/: __init__.py  observable.py
controllers/: baml_controller.py  context_controller.py  llm_controller.py  logs_controller.py  main_controller.py  notes_controller.py  planning_controller.py  prompt_controller.py  rag_controller.py  rag_panel_controller.py  settings_controller.py  supplemental_controller.py  system_controller.py
models/: ASK_MODE_GUIDE.md  base_prompts.py  context_bundle.py  llm_model.py  logs_panel_model.py  model_context_database.py  planning_model.py  prompt_model.py  rag_model.py  rag_panel_model.py  settings_model.py  story_model.py  stylesheets.py  summary_model.py  supplemental_panel_model.py  system_panel_model.py
models/baml_src/: outline.baml
settings/: summary_prompt.txt
tests/: conftest.py  test_outline_section_row.py  test_outline_tracker_widget.py  test_title_from_body.py
views/: bottom_control_panel.py  control_panel.py  custom_widgets.py  llm_panel.py  logs_panel.py  main_view.py  notes_panel.py  planning_mode_dialog.py  progress_dialog.py  prompts_panel.py  rag_file_browser.py  rag_panel.py  search_widget.py  story_panel.py  supplemental_panel.py  system_panel.py  thinking_panel.py  utilities_panel.py  utilities_widgets.py
