[tool.poetry]
name = "pietro"
version = "0.1.0"
description = "Story Builder Application - PyQt + LangChain"
authors = ["ShoolerM <devnull@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.0"
langchain = "^0.1.0"
langchain-openai = ">=0.0.5"
langchain-core = ">=0.1.0"
langchain-huggingface = ">=0.0.1"
langchain-text-splitters = ">=0.0.1"
langchain-community = ">=0.0.10"
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.0"
numpy = "^1.24.0"
Markdown = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
